@@ -511,7 +511,7 @@
 		  <child>
 		    <widget class="GtkTable" id="applet_table">
 		      <property name="visible">True</property>
-		      <property name="n_rows">12</property>
+		      <property name="n_rows">10</property>
 		      <property name="n_columns">4</property>
 		      <property name="homogeneous">False</property>
 		      <property name="row_spacing">6</property>
@@ -533,8 +533,8 @@
 			<packing>
 			  <property name="left_attach">2</property>
 			  <property name="right_attach">3</property>
-			  <property name="top_attach">8</property>
-			  <property name="bottom_attach">9</property>
+			  <property name="top_attach">6</property>
+			  <property name="bottom_attach">7</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
@@ -553,8 +553,8 @@
 			<packing>
 			  <property name="left_attach">3</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">8</property>
-			  <property name="bottom_attach">9</property>
+			  <property name="top_attach">6</property>
+			  <property name="bottom_attach">7</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -576,8 +576,8 @@
 			<packing>
 			  <property name="left_attach">2</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">7</property>
-			  <property name="bottom_attach">8</property>
+			  <property name="top_attach">5</property>
+			  <property name="bottom_attach">6</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
@@ -598,8 +598,8 @@
 			<packing>
 			  <property name="left_attach">2</property>
 			  <property name="right_attach">3</property>
-			  <property name="top_attach">11</property>
-			  <property name="bottom_attach">12</property>
+			  <property name="top_attach">9</property>
+			  <property name="bottom_attach">10</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
@@ -618,8 +618,8 @@
 			<packing>
 			  <property name="left_attach">3</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">11</property>
-			  <property name="bottom_attach">12</property>
+			  <property name="top_attach">9</property>
+			  <property name="bottom_attach">10</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -641,31 +641,8 @@
 			<packing>
 			  <property name="left_attach">2</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">10</property>
-			  <property name="bottom_attach">11</property>
-			  <property name="y_options"></property>
-			</packing>
-		      </child>
-
-		      <child>
-			<widget class="GtkCheckButton" id="applet_decoration_check">
-			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Whether to use window manager decoration</property>
-			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">Use _decoration</property>
-			  <property name="use_underline">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
-			  <property name="active">False</property>
-			  <property name="inconsistent">False</property>
-			  <property name="draw_indicator">True</property>
-			</widget>
-			<packing>
-			  <property name="left_attach">1</property>
-			  <property name="right_attach">2</property>
-			  <property name="top_attach">2</property>
-			  <property name="bottom_attach">3</property>
-			  <property name="x_options">fill</property>
+			  <property name="top_attach">8</property>
+			  <property name="bottom_attach">9</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
@@ -733,8 +710,8 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">7</property>
-			  <property name="bottom_attach">8</property>
+			  <property name="top_attach">5</property>
+			  <property name="bottom_attach">6</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -757,8 +734,8 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">8</property>
-			  <property name="bottom_attach">9</property>
+			  <property name="top_attach">6</property>
+			  <property name="bottom_attach">7</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -781,8 +758,8 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">10</property>
-			  <property name="bottom_attach">11</property>
+			  <property name="top_attach">8</property>
+			  <property name="bottom_attach">9</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -805,8 +782,8 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">11</property>
-			  <property name="bottom_attach">12</property>
+			  <property name="top_attach">9</property>
+			  <property name="bottom_attach">10</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -867,8 +844,8 @@
 			<packing>
 			  <property name="left_attach">0</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">6</property>
-			  <property name="bottom_attach">7</property>
+			  <property name="top_attach">4</property>
+			  <property name="bottom_attach">5</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options">fill</property>
 			</packing>
@@ -905,15 +882,15 @@
 			<packing>
 			  <property name="left_attach">0</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">9</property>
-			  <property name="bottom_attach">10</property>
+			  <property name="top_attach">7</property>
+			  <property name="bottom_attach">8</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options">fill</property>
 			</packing>
 		      </child>
 
 		      <child>
-			<widget class="GtkLabel" id="font">
+			<widget class="GtkLabel" id="applet_font">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">_Font:</property>
 			  <property name="use_underline">True</property>
@@ -930,8 +907,8 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">5</property>
-			  <property name="bottom_attach">6</property>
+			  <property name="top_attach">3</property>
+			  <property name="bottom_attach">4</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -951,8 +928,8 @@
 			<packing>
 			  <property name="left_attach">2</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">5</property>
-			  <property name="bottom_attach">6</property>
+			  <property name="top_attach">3</property>
+			  <property name="bottom_attach">4</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
@@ -983,11 +960,11 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkCheckButton" id="applet_sticky_check">
+			<widget class="GtkCheckButton" id="applet_decoration_check">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Whether the window shall be displayed on all desktops</property>
+			  <property name="tooltip" translatable="yes">Whether to use window manager decoration</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Be sticky</property>
+			  <property name="label" translatable="yes">Use _decoration</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
@@ -998,33 +975,66 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">3</property>
-			  <property name="bottom_attach">4</property>
+			  <property name="top_attach">2</property>
+			  <property name="bottom_attach">3</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
 
 		      <child>
-			<widget class="GtkCheckButton" id="applet_keepabove_check">
+			<widget class="GtkHBox" id="hbox1">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Whether the window shall be kept above all other windows</property>
-			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Keep above</property>
-			  <property name="use_underline">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
-			  <property name="active">False</property>
-			  <property name="inconsistent">False</property>
-			  <property name="draw_indicator">True</property>
+			  <property name="homogeneous">True</property>
+			  <property name="spacing">0</property>
+
+			  <child>
+			    <widget class="GtkCheckButton" id="applet_sticky_check">
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Whether the window shall be displayed on all desktops</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">_Be sticky</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">True</property>
+			      <property name="fill">True</property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkCheckButton" id="applet_keepabove_check">
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Whether the window shall be kept above all other windows</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">_Keep above</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">True</property>
+			      <property name="fill">True</property>
+			    </packing>
+			  </child>
 			</widget>
 			<packing>
-			  <property name="left_attach">1</property>
-			  <property name="right_attach">2</property>
-			  <property name="top_attach">4</property>
-			  <property name="bottom_attach">5</property>
+			  <property name="left_attach">2</property>
+			  <property name="right_attach">4</property>
+			  <property name="top_attach">2</property>
+			  <property name="bottom_attach">3</property>
 			  <property name="x_options">fill</property>
-			  <property name="y_options"></property>
+			  <property name="y_options">fill</property>
 			</packing>
 		      </child>
 		    </widget>
@@ -1071,7 +1081,7 @@
 		  <child>
 		    <widget class="GtkTable" id="popup_table">
 		      <property name="visible">True</property>
-		      <property name="n_rows">10</property>
+		      <property name="n_rows">8</property>
 		      <property name="n_columns">4</property>
 		      <property name="homogeneous">False</property>
 		      <property name="row_spacing">6</property>
@@ -1162,8 +1172,8 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">9</property>
-			  <property name="bottom_attach">10</property>
+			  <property name="top_attach">7</property>
+			  <property name="bottom_attach">8</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -1185,8 +1195,8 @@
 			<packing>
 			  <property name="left_attach">2</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">9</property>
-			  <property name="bottom_attach">10</property>
+			  <property name="top_attach">7</property>
+			  <property name="bottom_attach">8</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
@@ -1208,8 +1218,8 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">8</property>
-			  <property name="bottom_attach">9</property>
+			  <property name="top_attach">6</property>
+			  <property name="bottom_attach">7</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -1231,8 +1241,8 @@
 			<packing>
 			  <property name="left_attach">2</property>
 			  <property name="right_attach">3</property>
-			  <property name="top_attach">8</property>
-			  <property name="bottom_attach">9</property>
+			  <property name="top_attach">6</property>
+			  <property name="bottom_attach">7</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
@@ -1255,15 +1265,15 @@
 			<packing>
 			  <property name="left_attach">3</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">8</property>
-			  <property name="bottom_attach">9</property>
+			  <property name="top_attach">6</property>
+			  <property name="bottom_attach">7</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
 
 		      <child>
-			<widget class="GtkLabel" id="font">
+			<widget class="GtkLabel" id="popup_font">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">_Font:</property>
 			  <property name="use_underline">True</property>
@@ -1280,32 +1290,8 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">6</property>
-			  <property name="bottom_attach">7</property>
-			  <property name="x_options">fill</property>
-			  <property name="y_options">fill</property>
-			</packing>
-		      </child>
-
-		      <child>
-			<widget class="GtkCheckButton" id="popup_decoration_check">
-			  <property name="height_request">20</property>
-			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Whether to use window manager decoration</property>
-			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">Use _decoration</property>
-			  <property name="use_underline">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
-			  <property name="active">False</property>
-			  <property name="inconsistent">False</property>
-			  <property name="draw_indicator">True</property>
-			</widget>
-			<packing>
-			  <property name="left_attach">1</property>
-			  <property name="right_attach">2</property>
-			  <property name="top_attach">3</property>
-			  <property name="bottom_attach">4</property>
+			  <property name="top_attach">4</property>
+			  <property name="bottom_attach">5</property>
 			  <property name="x_options">fill</property>
 			  <property name="y_options">fill</property>
 			</packing>
@@ -1414,8 +1400,8 @@
 			<packing>
 			  <property name="left_attach">0</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">7</property>
-			  <property name="bottom_attach">8</property>
+			  <property name="top_attach">5</property>
+			  <property name="bottom_attach">6</property>
 			  <property name="y_options">fill</property>
 			</packing>
 		      </child>
@@ -1434,8 +1420,8 @@
 			<packing>
 			  <property name="left_attach">2</property>
 			  <property name="right_attach">4</property>
-			  <property name="top_attach">6</property>
-			  <property name="bottom_attach">7</property>
+			  <property name="top_attach">4</property>
+			  <property name="bottom_attach">5</property>
 			  <property name="y_options"></property>
 			</packing>
 		      </child>
@@ -1466,11 +1452,12 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkCheckButton" id="popup_sticky_check">
+			<widget class="GtkCheckButton" id="popup_decoration_check">
+			  <property name="height_request">20</property>
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Whether the window shall be displayed on all desktops</property>
+			  <property name="tooltip" translatable="yes">Whether to use window manager decoration</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Be sticky</property>
+			  <property name="label" translatable="yes">Use _decoration</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
@@ -1481,33 +1468,65 @@
 			<packing>
 			  <property name="left_attach">1</property>
 			  <property name="right_attach">2</property>
-			  <property name="top_attach">4</property>
-			  <property name="bottom_attach">5</property>
+			  <property name="top_attach">3</property>
+			  <property name="bottom_attach">4</property>
 			  <property name="x_options">fill</property>
-			  <property name="y_options"></property>
+			  <property name="y_options">fill</property>
 			</packing>
 		      </child>
 
 		      <child>
-			<widget class="GtkCheckButton" id="popup_keepabove_check">
+			<widget class="GtkHBox" id="hbox2">
 			  <property name="visible">True</property>
-			  <property name="tooltip" translatable="yes">Whether the window shall be kept above all other windows</property>
-			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Keep above</property>
-			  <property name="use_underline">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
-			  <property name="active">False</property>
-			  <property name="inconsistent">False</property>
-			  <property name="draw_indicator">True</property>
+			  <property name="homogeneous">True</property>
+			  <property name="spacing">0</property>
+
+			  <child>
+			    <widget class="GtkCheckButton" id="popup_sticky_check">
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Whether the window shall be displayed on all desktops</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">_Be sticky</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">True</property>
+			      <property name="fill">True</property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkCheckButton" id="popup_keepabove_check">
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Whether the window shall be kept above all other windows</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">_Keep above</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			      <property name="active">False</property>
+			      <property name="inconsistent">False</property>
+			      <property name="draw_indicator">True</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">True</property>
+			      <property name="fill">True</property>
+			    </packing>
+			  </child>
 			</widget>
 			<packing>
-			  <property name="left_attach">1</property>
-			  <property name="right_attach">2</property>
-			  <property name="top_attach">5</property>
-			  <property name="bottom_attach">6</property>
-			  <property name="x_options">fill</property>
-			  <property name="y_options"></property>
+			  <property name="left_attach">2</property>
+			  <property name="right_attach">4</property>
+			  <property name="top_attach">3</property>
+			  <property name="bottom_attach">4</property>
+			  <property name="y_options">fill</property>
 			</packing>
 		      </child>
 		    </widget>
